--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 
 <hr>
 
-<form method="post">
-    {{ form.csrf_token() }}
-    {{ form.username.label }}{{ form.username }} <br>
-    {{ form.password.label }}{{ form.password }} <br>
-    {{ form.password2.label }}{{ form.password2 }} <br>
-    {{ form.submit }} <br>
+<ul>
+	<li>哈哈哈</li>
+
+</ul>
 
 </form>
 
